# final-project-student-information-system-Autoscotty43

./: CMakeLists.txt  README.md
include/: GradingScheme.h  Student.h  StudentUtils.h
src/: GradingScheme.cpp  Student.cpp  StudentUtils.cpp  main.cpp
